[package]
name = "parse"
version = "0.1.0"
authors = ["luozijun <luozijun.assistant@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
smoltcp = { version = "0.6", default-features = false }

[features]
default = [
    "smoltcp/std",
    "smoltcp/proto-ipv4",
    "smoltcp/proto-ipv6",
]
