[package]
name = "sync"
version = "0.1.0"
authors = ["luozijun <luozijun.assistant@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts    = "0.2"
tokio      = "1.0"
hyper      = "0.14"
hyper-tls  = "0.5"

[features]
default = [
    "tokio/rt-multi-thread",
    "hyper/client",
    "hyper/http1",
]
